--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -24,7 +24,7 @@
 	}
 
 	@include bp-down(xs) {
-		@include mobile-navbar-nav-transition(left);
+		transition: left $mobile-navbar-nav-transition;
 
 		.navbar-nav-opened & {
 			@include content-transform;
@@ -95,7 +95,7 @@
 		width: $navbar-nav-mobile-width;
 
 		@include bp-down(xs) {
-			@include mobile-navbar-nav-transition(transform);
+			transition: transform $mobile-navbar-nav-transition;
 			@include mobile-navbar-nav-transform;
 
 			.navbar-nav-opened & {
@@ -184,7 +184,7 @@
 	.navbar-toggle {
 		border: none;
 		background: transparent;
-		padding: 0 $space-md;
+		padding: 0 $toggle-padding-horizontal;
 
 		&:focus {
 			outline: none;
